@@ -20,6 +20,7 @@ $ sudo make uninstall
 ## Help
 ```
 $ gousers --help
+gousers - simple dump for utmp/wtmp/btmp linux files
 Usage: gousers [options] [command]
 
 Options:
@@ -29,11 +30,13 @@ Options:
 
 Commands:
   user[s] - show users is currently logged (default command)
+  stat    - show logged user statistics (JSON)
   dump    - show full dump
 
 Example:
   gousers --help                - print full help
   gousers [users]               - show users from /var/run/utmp
+  gousers stat                  - show logged user statistics
   gousers -f /var/log/btmp user - show users from /var/run/btmp
   gousers dump                  - dump /var/run/utmp
   gousers -f /var/log/wtmp dump - dump /var/log/wtmp
@@ -64,3 +67,26 @@ $ sudo gousers -f /var/log/btmp dump
 2023-07-18 20:49:03 #7  USER_PROC User='user' TTY='tty2' ID='tty2' PID=75431 Term/Exit=0/0 SID=75431
 2023-07-18 23:54:35 #6 LOGIN_PROC User='root' TTY='pts/5' ID='5' PID=111464 Term/Exit=0/0 SID=0
 ```
+
+### Show user statistics
+```
+$ gousers stat
+{
+  "total": 2,
+  "local": 0,
+  "remote": 1,
+  "local_x": 1,
+  "remote_x": 0,
+  "local_root": true,
+  "user": {
+    "name": "user",
+    "pid": 1384,
+    "tty": "tty7",
+    "host": ":0",
+    "id": ":0",
+    "time": "2023-07-19T09:09:29.41857+03:00"
+  },
+  "user_type": "local_x",
+  "user_logons": 2
+```
+
