@@ -1,0 +1,2 @@
+[-] add support and test 32-bit platform
+[+] add user statistics
